--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,15 @@ dependencies {
     implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.7.6'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'
 
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    // MapStruct Annotation Processor
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
+    implementation group: 'org.springframework.security', name: 'spring-security-web', version: '5.4.2'
+    implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.4.2'
+    implementation group: 'org.springframework.security', name: 'spring-security-taglibs', version: '5.4.2'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
 }
 
 test {
